--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,13 @@ set -g prefix C-s
 
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
+set -g status-keys vi
+
+# System clipboard copy and vim bindings in copy mode
+setw -g mode-keys vi
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
@@ -12,8 +19,7 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 set-option -g default-terminal "screen-256color"
-
-set -g status-bg "#666666"
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 
 # splits
 bind-key - split-window -v -c '#{pane_current_path}'
