--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 unbind C-b
-set -g prefix C-s
+set -g prefix C-Space
 
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
