--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,35 @@
+# Prefix
+
 unbind C-b
 set -g prefix C-Space
 
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+# Session options
 
+set -g base-index 1
+set -g renumber-windows on
+
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+set -g default-terminal "screen-256color"
 set -g status-keys vi
 
-# System clipboard copy and vim bindings in copy mode
-setw -g mode-keys vi
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# Window options
 
-# Smart pane switching with awareness of vim splits
+set-window-option -g mode-keys vi
+
+# Prefix bindings
+
+bind - split-window -v -c '#{pane_current_path}'
+bind \ split-window -h -c '#{pane_current_path}'
+
+bind b break-pane -d
+bind c new-window -c '#{pane_current_path}'
+
+bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind C-j choose-tree
+bind K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+
+# Key bindings
+
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(git|view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
@@ -18,25 +37,24 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-set-option -g default-terminal "screen-256color"
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# splits
-bind-key - split-window -v -c '#{pane_current_path}'
-bind-key \ split-window -h -c '#{pane_current_path}'
+bind -n S-Left resize-pane -L 1
+bind -n S-Right resize-pane -R 1
+bind -n S-Down resize-pane -D 1
+bind -n S-Up resize-pane -U 1
 
-# coarse resizing controls
-bind -n S-Left resize-pane -L 10
-bind -n S-Right resize-pane -R 10
-bind -n S-Down resize-pane -D 5
-bind -n S-Up resize-pane -U 5
+# Styles and formats
 
-# more sensible window control
-bind c new-window -c '#{pane_current_path}'
-set -g base-index 1
-set -g renumber-windows on
+set -g status-bg black
+set -g status-fg brightblue
 
-bind-key b break-pane -d
+set -g pane-border-fg brightgreen
+set -g pane-active-border-fg white
 
-# Sane scrolling
-set -g mouse on
+set-window-option -g window-status-bg black
+set-window-option -g window-status-fg brightblue
+
+set-window-option -g window-status-current-bg brightgreen
+set-window-option -g window-status-current-fg white
