--- a/tmux.conf
+++ b/tmux.conf
@@ -37,21 +37,31 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
 bind -n S-Left resize-pane -L 1
 bind -n S-Right resize-pane -R 1
 bind -n S-Down resize-pane -D 1
 bind -n S-Up resize-pane -U 1
 
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
 # Styles and formats
+
+set -g pane-border-fg brightgreen
+set -g pane-active-border-fg white
+
+set -g status-left "[#{session_name}] "
+set -g status-left-width 70
+set -g status-right "%H:%M %G-%m-%d"
+
+set -g message-fg white
+set -g message-bg blue
 
 set -g status-bg black
 set -g status-fg brightblue
 
-set -g pane-border-fg brightgreen
-set -g pane-active-border-fg white
+set-window-option -g window-status-format " #{window_index}: #{window_name} "
+set-window-option -g window-status-current-format " #{window_index}: #{window_name} "
 
 set-window-option -g window-status-bg black
 set-window-option -g window-status-fg brightblue
