--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,7 @@ bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 set -g pane-border-fg brightgreen
 set -g pane-active-border-fg white
 
+set -g status-position top
 set -g status-left "[#{session_name}] "
 set -g status-left-width 70
 set -g status-right "%H:%M %G-%m-%d"
