Enable mouse in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,8 @@ set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 set -g default-terminal "screen-256color"
 set -g status-keys vi
 
+set -g mouse
+
 # Window options
 
 set-window-option -g mode-keys vi
