--- a/tmux.conf
+++ b/tmux.conf
@@ -53,6 +53,8 @@ set -g pane-border-fg brightgreen
 set -g pane-active-border-fg white
 
 set -g status-left "[#{session_name}] "
+set -g status-left-length 40
+
 set -g status-right "%H:%M %G-%m-%d"
 set -g status-position top
 
