--- a/tmux.conf
+++ b/tmux.conf
@@ -7,11 +7,10 @@ set -g prefix C-Space
 
 set -g base-index 1
 set -g renumber-windows on
-
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+set -g default-command "reattach-to-user-namespace -l $SHELL"
 set -g default-terminal "screen-256color"
 set -g status-keys vi
-
+set -g escape-time 0
 set -g mouse
 
 # Window options
