Add mouse copy support in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -47,7 +47,9 @@ bind -n S-Down resize-pane -D 1
 bind -n S-Up resize-pane -U 1
 
 bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy y copy-pipe "pbcopy"
+
+bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
 
 # Styles and formats
 
