--- a/tmux.conf
+++ b/tmux.conf
@@ -1,78 +1,56 @@
-# Prefix
-
 unbind C-b
-set -g prefix C-Space
+set-option -g prefix C-Space
 
-# Session options
+set-option -g base-index 1
+set-option -g renumber-windows on
+set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
+set-option -g default-terminal "screen-256color"
+set-option -g status-keys vi
+set-option -g escape-time 0
+set-option -g mouse
 
-set -g base-index 1
-set -g renumber-windows on
-set -g default-command "reattach-to-user-namespace -l $SHELL"
-set -g default-terminal "screen-256color"
-set -g status-keys vi
-set -g escape-time 0
-set -g mouse
+set-option -g pane-border-fg brightgreen
+set-option -g pane-active-border-fg white
 
-# Window options
+set-option -g status-left "[#{session_name}] "
+set-option -g status-left-length 40
+set-option -g status-right "%H:%M %G-%m-%d"
+set-option -g status-position top
+set-option -g status-bg black
+set-option -g status-fg brightblue
+
+set-option -g message-fg white
+set-option -g message-bg blue
 
 set-window-option -g mode-keys vi
 
-# Prefix bindings
+set-window-option -g window-status-format " #{window_index}: #{window_name} "
+set-window-option -g window-status-current-format " #{window_index}: #{window_name} "
+set-window-option -g window-status-bg black
+set-window-option -g window-status-fg brightblue
+set-window-option -g window-status-current-bg brightgreen
+set-window-option -g window-status-current-fg white
 
-bind - split-window -v -c '#{pane_current_path}'
-bind \ split-window -h -c '#{pane_current_path}'
+bind-key - split-window -v -c '#{pane_current_path}'
+bind-key \ split-window -h -c '#{pane_current_path}'
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
 
-bind b break-pane -d
-bind c new-window -c '#{pane_current_path}'
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "pbcopy"
+bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
 
-bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
-bind C-j choose-tree
-bind K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
-
-# Key bindings
+bind-key -T root S-Left resize-pane -L 1
+bind-key -T root S-Right resize-pane -R 1
+bind-key -T root S-Down resize-pane -D 1
+bind-key -T root S-Up resize-pane -U 1
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
-bind -n S-Left resize-pane -L 1
-bind -n S-Right resize-pane -R 1
-bind -n S-Down resize-pane -D 1
-bind -n S-Up resize-pane -U 1
-
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "pbcopy"
-
-bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
-
-# Styles and formats
-
-set -g pane-border-fg brightgreen
-set -g pane-active-border-fg white
-
-set -g status-left "[#{session_name}] "
-set -g status-left-length 40
-
-set -g status-right "%H:%M %G-%m-%d"
-set -g status-position top
-
-set -g message-fg white
-set -g message-bg blue
-
-set -g status-bg black
-set -g status-fg brightblue
-
-set-window-option -g window-status-format " #{window_index}: #{window_name} "
-set-window-option -g window-status-current-format " #{window_index}: #{window_name} "
-
-set-window-option -g window-status-bg black
-set-window-option -g window-status-fg brightblue
-
-set-window-option -g window-status-current-bg brightgreen
-set-window-option -g window-status-current-fg white
+bind-key -T root C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -T root C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -T root C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -T root C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -T root C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
