Update tmux key bindings
- Use verbose format for prefix namespace bindings
- Add bindings to swap neighboring windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,14 +31,17 @@ set-window-option -g window-status-fg brightblue
 set-window-option -g window-status-current-bg brightgreen
 set-window-option -g window-status-current-fg white
 
-bind-key - split-window -v -c '#{pane_current_path}'
-bind-key \ split-window -h -c '#{pane_current_path}'
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
-bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
-
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "pbcopy"
 bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
+
+bind-key -T prefix - split-window -v -c '#{pane_current_path}'
+bind-key -T prefix \ split-window -h -c '#{pane_current_path}'
+bind-key -T prefix r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key -T prefix K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+
+bind-key -T prefix h swap-window -t -
+bind-key -T prefix l swap-window -t +
 
 bind-key -T root S-Left resize-pane -L 1
 bind-key -T root S-Right resize-pane -R 1
