Add 'break session' tmux binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,6 +39,7 @@ bind-key -T prefix - split-window -v -c '#{pane_current_path}'
 bind-key -T prefix \ split-window -h -c '#{pane_current_path}'
 bind-key -T prefix r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 bind-key -T prefix K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+bind-key -T prefix B send-keys 'tat && exit' 'C-m'
 
 bind-key -T prefix h swap-window -t -
 bind-key -T prefix l swap-window -t +
