--- a/tmux.conf
+++ b/tmux.conf
@@ -37,7 +37,7 @@ bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
 
 bind-key -T prefix - split-window -v -c '#{pane_current_path}'
 bind-key -T prefix \ split-window -h -c '#{pane_current_path}'
-bind-key -T prefix r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key -T prefix r source-file $HOME/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 bind-key -T prefix K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
 bind-key -T prefix B send-keys 'tat && exit' 'C-m'
 
