Update dotfiles for macOS High Sierra
- Use phantomjs instead of qt
- Remove OSX configuration
- Add iTerm2 configuration
- Halt install on the first failed step
- Fully automate zsh setup
- Update tmux.conf for latest version
- Add 1Password, Alfred, Hammerspoon, and Postman

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,9 +31,9 @@ set-window-option -g window-status-fg brightblue
 set-window-option -g window-status-current-bg brightgreen
 set-window-option -g window-status-current-fg white
 
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "pbcopy"
-bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel
 
 bind-key -T prefix - split-window -v -c '#{pane_current_path}'
 bind-key -T prefix \ split-window -h -c '#{pane_current_path}'
@@ -58,3 +58,8 @@ bind-key -T root C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -T root C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -T root C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -T root C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
