Fix tmux copy mode behavior
https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/66

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,9 +30,9 @@ set-window-option -g window-status-fg brightblue
 set-window-option -g window-status-current-bg brightgreen
 set-window-option -g window-status-current-fg white
 
-bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
-bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
 bind-key -T prefix - split-window -v -c '#{pane_current_path}'
 bind-key -T prefix \ split-window -h -c '#{pane_current_path}'
