--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,7 @@ set-option -g mouse
 set-option -g pane-border-fg brightgreen
 set-option -g pane-active-border-fg white
 
-set-option -g status-left "[#{session_name}] "
-set-option -g status-left-length 40
+set-option -g status-left ''
 set-option -g status-right "%H:%M %G-%m-%d"
 set-option -g status-position top
 set-option -g status-bg black
@@ -24,8 +23,8 @@ set-option -g message-bg blue
 
 set-window-option -g mode-keys vi
 
-set-window-option -g window-status-format " #{window_index}: #{window_name} "
-set-window-option -g window-status-current-format " #{window_index}: #{window_name} "
+set-window-option -g window-status-format " #{window_index}:#{window_name} "
+set-window-option -g window-status-current-format " #{window_index}:#{window_name} "
 set-window-option -g window-status-bg black
 set-window-option -g window-status-fg brightblue
 set-window-option -g window-status-current-bg brightgreen
