--- a/unix/.tmux.conf
+++ b/unix/.tmux.conf
@@ -3,36 +3,23 @@ set-option -g prefix C-Space
 
 set-option -g base-index 1
 set-option -g renumber-windows on
-set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
 set-option -g default-terminal "screen-256color"
 set-option -g status-keys vi
 set-option -g escape-time 0
 set-option -g mouse
 
-set-option -g pane-border-fg brightgreen
-set-option -g pane-active-border-fg white
-
 set-option -g status-left ''
 set-option -g status-right "%H:%M %G-%m-%d"
 set-option -g status-position top
-set-option -g status-bg black
-set-option -g status-fg brightblue
-
-set-option -g message-fg white
-set-option -g message-bg blue
 
 set-window-option -g mode-keys vi
 
 set-window-option -g window-status-format " #{window_index}:#{window_name} "
-set-window-option -g window-status-current-format " #{window_index}:#{window_name} "
-set-window-option -g window-status-bg black
-set-window-option -g window-status-fg brightblue
-set-window-option -g window-status-current-bg brightgreen
-set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-format "*#{window_index}:#{window_name}*"
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 bind-key -T prefix - split-window -v -c '#{pane_current_path}'
 bind-key -T prefix \ split-window -h -c '#{pane_current_path}'
